# ml_chembl

./: .chembl_ws_client__0.10.9  .gitignore  README.md  chembl_downloader.py  config.toml  eda.ipynb  eda_1.ipynb  eda_2.ipynb  learning.ipynb  main.ipynb  mlflow_utils.py  pyproject.toml  requirements.txt  spark_etl_job.py
.github/: AGENT.md
data_fetcher/: README.md  __main__.py  config.py
data_fetcher/database/: connection.py  repository.py
data_fetcher/download/: chembl_db_downloader.py
data_fetcher/export/: parquet_exporter.py
data_processing/: components.py  run_pipeline.py
data_processing/processed_data/: ChEMBL_processed.parquet
libs/: chembl_downloader.py  csv2parquet.py  misc.py
libs/queries/: how_many_for_ic50_calculation.sql  how_many_standard_types.sql  query.sql  unique_standard_type.sql
ml_ds_factory/: libs.py  main.py
notes/: CHEMBL_dataset_description.md  notatki.md  notes.md
notes/cwiczenia/: 05-09.md  05-15.md
notes/notatki_cwiczenia/: 05-09.md
spark_airflow/: DockerCompose.yml  local_cluster.yml
spark_airflow/dags/: chembl_etl_dag.py
spark_airflow/data_platform/: docker-compose.yml
